# colorizer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  palette.cpp  scribble.cpp  scribble.hpp  window.cpp  window.h  window_ui.cpp
colorizer/: BKColorizer.hpp
examples/: CMakeLists.txt
examples/grid_of_quadtrees_colorizer_qt_gui_app/: CMakeLists.txt  main.cpp  palette.cpp  scribble.cpp  scribble.hpp  window.cpp  window.h  window_ui.cpp
examples/preprocessing/: skeleton.hpp  skeleton_chen_hsu.cpp  skeleton_zhang_suen.cpp  threshold.cpp  threshold.hpp
include/lazybrush/: lazybrush.hpp
include/lazybrush/grid_of_quadtrees_colorizer/: colorization_context.hpp  colorizer.hpp  grid.hpp  quadtree.hpp  types.hpp
preprocessing/: skeleton.hpp  skeletonChenHsu.cpp  skeletonZhangSuen.cpp  threshold.cpp  threshold.hpp
space_partitioning/: grid.hpp  quadtree.hpp
